Changelog
=========

1.9.9 (unreleased)
------------------

- Nothing changed yet.


1.9.8 (2016-12-15)
------------------

- Fix locking error in VM charging (#25145).


1.9.7 (2016-11-17)
------------------

- Bugfix: log stdout/stderr of prepare/finish scripts.


1.9.6 (2016-10-31)
------------------

- Read global backy.conf parameters from `/etc/backy.global.conf`. Fall back to
  built-in defaults if this file does not exist.


1.9.5 (2016-10-21)
------------------

- Drop the invocation of fc-qemu using the config file and use the VM name
  instead. (Requires fc-qemu 0.8.2)

- Always make pending requests unique based on their comment.
  When a request with an identical comment is registered we update the parameters, though.

1.9.4 (2016-06-20)
------------------

- New backup schedule "default-full". #21960


1.9.3 (2016-05-04)
------------------

- Fix bug in VM image charging. Also reduce cluster load while charging. #21393


1.9.2 (2016-04-07)
------------------

- Create symlinks for users boxes which use autofs. Needs at least fc.platform
  commit:11f2052bd606 (#19668).


1.9.1 (2016-03-20)
------------------

- Switch to explicit RBD pool selection instead of RG-based derivation. #20692


1.9.0 (2016-03-03)
------------------

- Nagios: Configure a separate system contact group for each RG and put
  only users with the wheel permission in (#20445).


1.8.3 (2016-03-01)
------------------

- Don't fail to schedule maintenance if estimate is a float (#20326)


1.8.2 (2016-02-19)
------------------

- Reliably remove users from VMs (#20092)

- Move nagios consistency check to fc.platform (#19851)

1.8.1 (2016-01-20)
------------------

- Minor output improvement on VM image update script.


1.8 (2016-01-20)
----------------

- Introduce base image management: clone VM images for our branches
  (dev, staging, production) into Ceph's 'rbd' pool to use for cloning
  new VMs.


1.7.10 (2015-12-18)
-------------------
